# Bannkenn-Home

./: .env.example  .gitignore  README.md  docker-compose-build.yml  docker-compose.yml
device-monitor/: Cargo.toml  Dockerfile
device-monitor/data/: labels.json
device-monitor/src/: api.rs  capture.rs  discovery.rs  geo.rs  labels.rs  main.rs  models.rs
docs/: 01_Custom Rust-Based Network Detection and Response (NDR) System.md  02_WiFi RSSI Motion Detection.md  README.md
scripts/: push-image.sh
tasks/: lessons.md  todo.md
