[package]
name = "device-monitor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "device-monitor"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
pnet = "0.35"
pcap = "2"
etherparse = "0.15"
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
dns-lookup = "2"
maxminddb = "0.23"
